--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,6 @@
 .App-link {
   color: #61dafb;
 }
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -40,3 +39,7 @@
 button {
   font-size: calc(10px + 2vmin);
 }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
